--- a/public/scss/generics/others.scss
+++ b/public/scss/generics/others.scss
@@ -21,6 +21,10 @@
     font-family: Uni Sans Heavy;
     src: url("fonts/UniSans/Uni Sans Heavy.otf");
 }
+@font-face {
+    font-family: Uni Sans W01 Book;
+    src: url("fonts/UniSans/Uni Sans W01 Book.ttf");
+}
 @font-face {font-family: "UniSansW01-Regular";
     src: url("//db.onlinewebfonts.com/t/ab804af7699fabaf769911c77bb4d115.eot");
     src: url("//db.onlinewebfonts.com/t/ab804af7699fabaf769911c77bb4d115.eot?#iefix") format("embedded-opentype"),
