--- a/public/scss/pages/about.scss
+++ b/public/scss/pages/about.scss
@@ -22,22 +22,23 @@
 }//hero
 #about-us{
   // margin-top:-120px;
-  // padding-top:150px;
+  padding-top:100px;
   // padding-bottom:150px;
   background: #f2f2f2;
   .about-us-main{
     margin-bottom: 30px;
-    p{color:$color-2; font-weight:300; font-size: 18px;line-height:30px;}
+    // p{color:$color-2; font-weight:300; font-size: 18px;line-height:30px;}
   }
   hr{background: $color-2; width: 40%; height: 2px;}
 }
 
 #about-us-vission{
 
-  padding-top:100px;
+  // padding-top:100px;
   background: $color-1;
   // background: #eee;
   .about-us-main{
+    margin-top: 100px;
     h2{font-size: 30px; text-transform: uppercase;padding-bottom: 20px;color:$color-6}
     p{line-height: 28px;color:$color-4}
   }
