--- a/public/scss/pages/contact.scss
+++ b/public/scss/pages/contact.scss
@@ -4,17 +4,18 @@
   // background: linear-gradient(rgb(170, 194, 247), rgba(13, 17, 32, 1)), url('../img/contact/contact.jpg') no-repeat center center ;
   // background: linear-gradient(rgba(19, 25, 38, 1), rgba(13, 17, 32, 1)), url('../img/contact/contact.png') no-repeat center center ;
   background:$color-1;
-  background:  url('../img/contact/contact.png') no-repeat center center rgba(13, 17, 32, 1) ;
+  background:  url('../img/contact/Flower.png') no-repeat center center rgba(13, 17, 32, 1) ;
+  // background:  url('../img/contact/contact.png') no-repeat center center rgba(13, 17, 32, 1) ;
   background-size: cover;
   // background-size: 100% 100%;
   width: 100%;
-  // height:40vh;
+  height:65vh;
   // height:60%; 
-  height:500px;
+  // height:500px;
   display: flex;
   align-items: center;
   justify-content: center;
-  // clip-path: polygon(100% 0px, 100% 80%, 52% 80%, 50% 91%, 48% 80%, 0px 80%, 0px 0px);
+  clip-path: polygon(100% 0px, 100% 80%, 52% 80%, 50% 91%, 48% 80%, 0px 80%, 0px 0px);
   //position: relative;
   .contents{
     //position: absolute !important;
