--- a/public/scss/pages/referral.scss
+++ b/public/scss/pages/referral.scss
@@ -2,14 +2,14 @@
 
 #bg-referral{
   //background: linear-gradient(rgba(19, 25, 38, 1), rgba(13, 17, 32, 1)), url('../../img/about/about.png') no-repeat center center ;
-  background:  url('../img/faq/Faq.jpg') no-repeat center center ;
+  background: $color-1  url('../img/referral/referer2.png') no-repeat center center ;
   background-size: cover;
   width: 100%;
-  height:40vh;
+  height:500px;
   display: flex;
   align-items: center;
   justify-content: center;
-  clip-path: polygon(100% 0px, 100% 80%, 52% 80%, 50% 91%, 48% 80%, 0px 80%, 0px 0px);
+  // clip-path: polygon(100% 0px, 100% 80%, 52% 80%, 50% 91%, 48% 80%, 0px 80%, 0px 0px);
   //position: relative;
   .contents{
     //position: absolute !important;
@@ -27,19 +27,19 @@
 }//hero
 
 .ref{
-  background: #fff;
-  margin-top: -150px;
-  padding-top: 200px;
-  padding-bottom: 100px;
+  background: #eee;
+
+  // padding-top: 100px;
+  // padding-bottom: 100px;
 
   img{text-align: center;display: block; margin: 0 auto;}
   // p{line-height:28px}
-  .ref-main-main{
-    h1{
-      font-size: 35px;color:$color-1;font-weight: 700;text-transform: uppercase;
-    }
-    p{ color:rgba($color-1, .8); font-weight:400; line-height: 28px;}
-  }
+  // .ref-main-main{
+  //   h1{
+  //     font-size: 35px;color:$color-1;font-weight: 700;text-transform: uppercase;
+  //   }
+  //   p{ color:rgba($color-1, .8); font-weight:400; line-height: 28px;}
+  // }
 }
 
 .refsteps{
